--- a/prueba.html
+++ b/prueba.html
@@ -61,14 +61,15 @@
 	border:1px solid black;
 
 }
+
     </style>
   </head>
 <body>
 <div class="divTable" width="650px">
 <div class="divTableBody">
 <div class="divTableRow">
-<div class="divTableCell"><img  src="logo.jpg" alt="" /></div>
-<div class="divTableCell"><img src="vertical-line.jpg" alt="" /></div>
+<div class="logo" style="width:204px; display:table-cell; vertical-align:middle; text-align:center"><img  src="logo.jpg"  alt="" /></div>
+<div class="divTableCell" style="display:table-cell; vertical-align:middle; text-align:center"><img src="vertical-line.jpg" alt="" /></div>
 <div class="divTableCell">
 <p id="name">Orri Avraham <span style="color: #d5eaea;">| CEO</span></p>
 <div class="divTable">
@@ -90,7 +91,7 @@
 </div>
 </div>
 </div>
-<div class="divTableCell"><img src="balloons.jpg" alt="" /></div>
+<div class="divTableCell" style="border:1px solid; display:table-cell;padding-left:14px" ><img src="balloons.jpg" alt="" /></div>
 </div>
 </div>
 </div>
