--- a/prueba.html
+++ b/prueba.html
@@ -50,7 +50,6 @@
 .divTableCell, .divTableHead {
 	display: table-cell;
 	vertical-align:top;
-	padding-bottom: -1px;
 	padding-left: 20px;
 	table-layout:fixed;
 
@@ -119,11 +118,11 @@
 <div class="divTableCellInfo" id="info" style="padding-left:11px;">Beit Alliance, Jerusalem, Israel</div>
 </div>
 </div>
-<div class="divTableCell" style=" display:table-cell;padding-left:14px" ><img src="balloons.jpg" alt="" /></div>
+<div class="divTableCell" style=" padding-top:10px;display:table-cell;padding-left:14px" ><img src="balloons.jpg" alt="" /></div>
 </div>
 </div>
 </div>
-<div class="new" style="width:100%, height:150px;"><img src="horizontal-line.jpg" width="650px" height="15px" alt="" /></div>
+<div class="new" style="padding-top:-3px;"><img src="horizontal-line.jpg" width="650px" height="15px" alt="" /></div>
 
 </meta>
 </html>
