--- a/prueba.html
+++ b/prueba.html
@@ -122,7 +122,7 @@
 </div>
 </div>
 </div>
-<div class="new" style="padding-top:-3px;"><img src="horizontal-line.jpg" width="650px" height="15px" alt="" /></div>
+<div class="divTableCell" style="padding-top:-3px;"><img src="horizontal-line.jpg" width="650px" height="15px" alt="" /></div>
 
 </meta>
 </html>
