--- a/prueba.html
+++ b/prueba.html
@@ -38,20 +38,23 @@
 	/* DivTable.com */
 .divTable{
 	display: table;
-	
+	font-size: 0;
 }
 .divTableRow {
 	display: table-row;
+	font-size: 0;
 }
 .divTableHeading {
 	background-color: #EEE;
 	display: table-header-group;
+	font-size: 0;
 }
 .divTableCell, .divTableHead {
 	display: table-cell;
 	vertical-align:top;
 	padding-left: 20px;
 	table-layout:fixed;
+	font-size: 0;
 
 }
 .divTableCellInfo {
@@ -59,33 +62,35 @@
 	vertical-align:top;
 	padding-top: 2px;
 	padding-left: 5px;
-	table-layout:fixed;
-
+	font-size: 0;
 }
 .divName {
 	display: table-cell;
 	vertical-align:top;
 	padding-left: 12px;
 	padding-top: 25px;
+	font-size: 0;
 }
 .divTableHeading {
 	background-color: #EEE;
 	display: table-header-group;
 	font-weight: bold;
-	
+	font-size: 0;
 }
 .divTableFoot {
 	background-color: #EEE;
 	display: table-footer-group;
 	font-weight: bold;
-	
+	font-size: 0;
 }
 .divTableBody {
 	display: table-row-group;
+	font-size: 0;
 }
 .divIcon {
 	height: 15px;
 	width: 15px;
+	font-size: 0;
 }
 
     </style>
@@ -118,11 +123,11 @@
 <div class="divTableCellInfo" id="info" style="padding-left:11px;">Beit Alliance, Jerusalem, Israel</div>
 </div>
 </div>
-<div class="divTableCell" style=" padding-top:10px;display:table-cell;padding-left:14px" ><img src="balloons.jpg" alt="" /></div>
+<div class="divTableCell" style=" display:table-cell;padding-left:14px" ><img src="balloons.jpg" alt="" /></div>
 </div>
 </div>
 </div>
-<div class="divTableCell" style="padding-top:-3px;"><img src="horizontal-line.jpg" width="650px" height="15px" alt="" /></div>
+<div class="new" style="font-size:0;"><img src="horizontal-line.jpg" width="650px" height="15px" alt="" /></div>
 
 </meta>
 </html>
