--- a/prueba.html
+++ b/prueba.html
@@ -62,35 +62,42 @@
 	vertical-align:top;
 	padding-top: 2px;
 	padding-left: 5px;
-	font-size: 0;
+	table-layout:fixed;
+	font-size:0px;
 }
 .divName {
 	display: table-cell;
 	vertical-align:top;
 	padding-left: 12px;
 	padding-top: 25px;
-	font-size: 0;
+		font-size:0px;
+
 }
 .divTableHeading {
 	background-color: #EEE;
 	display: table-header-group;
 	font-weight: bold;
-	font-size: 0;
+	font-size:0px;
+
+	
 }
 .divTableFoot {
 	background-color: #EEE;
 	display: table-footer-group;
 	font-weight: bold;
-	font-size: 0;
+	font-size:0px;
+
 }
 .divTableBody {
 	display: table-row-group;
-	font-size: 0;
+	font-size:0px;
+
 }
 .divIcon {
 	height: 15px;
 	width: 15px;
-	font-size: 0;
+	font-size:0px;
+
 }
 
     </style>
@@ -127,7 +134,7 @@
 </div>
 </div>
 </div>
-<div class="new" style="font-size:0;"><img src="horizontal-line.jpg" width="650px" height="15px" alt="" /></div>
+<div class="new" ><img src="horizontal-line.jpg" width="650px" height="15px" alt="" /></div>
 
 </meta>
 </html>
