--- a/prueba.html
+++ b/prueba.html
@@ -130,11 +130,11 @@
 <div class="divTableCellInfo" id="info" style="padding-left:11px;">Beit Alliance, Jerusalem, Israel</div>
 </div>
 </div>
-<div class="divTableCell" style=" display:table-cell;padding-left:14px" ><img src="balloons.jpg" alt="" /></div>
+<div class="divTableCell" style=" display:table-cell;padding-left:14px;font-size:0px;" ><img src="balloons.jpg" alt="" /></div>
 </div>
 </div>
 </div>
-<div class="new" ><img src="horizontal-line.jpg" width="650px" height="15px" alt="" /></div>
+<div class="new" style="font-size:0px;"><img src="horizontal-line.jpg" width="650px" height="15px" alt="" /></div>
 
 </meta>
 </html>
