--- a/prueba.html
+++ b/prueba.html
@@ -134,7 +134,7 @@
 </div>
 </div>
 </div>
-<div class="new" style="font-size:0px;"><img src="horizontal-line.jpg" width="650px" height="15px" alt="" /></div>
+<div class="new" style="font-size:0px;display:flex;"><img src="horizontal-line.jpg" width="650px" height="15px" alt="" /></div>
 
 </meta>
 </html>
