--- a/prueba.html
+++ b/prueba.html
@@ -103,7 +103,8 @@
     </style>
   </head>
 <body>
-<div class="divTable" width="650px">
+<div class="divTable" width="650px" style="border:1px solid">
+<div class="divTable" width="650px" >
 <div class="divTableBody">
 <div class="divTableRow">
 <div class="logo" style="width:204px; display:table-cell; vertical-align:middle; text-align:center"><img style="width:80%" src="logo.jpg"  alt="" /></div>
@@ -130,11 +131,14 @@
 <div class="divTableCellInfo" id="info" style="padding-left:11px;">Beit Alliance, Jerusalem, Israel</div>
 </div>
 </div>
-<div class="divTableCell" style=" display:table-cell;padding-left:14px;font-size:0px;" ><img src="balloons.jpg" alt="" /></div>
+<div class="divTableCell" style=" display:table-cell;padding-left:12px;font-size:0px;" ><img src="balloons.jpg" alt="" /></div>
 </div>
 </div>
 </div>
-<div class="new" style="font-size:0px;display:flex;"><img src="horizontal-line.jpg" width="650px" height="15px" alt="" /></div>
-
+<div class="divTable" style="width:630px;">
+<div class="divTableRow" style="font-size:0px;display:table-cell;column-span:3;"><img src="horizontal-line.jpg" width="650px" height="15px" alt="" /></div>
+</div>
+</div>
+</body>
 </meta>
 </html>
