--- a/prueba.html
+++ b/prueba.html
@@ -103,7 +103,7 @@
     </style>
   </head>
 <body>
-<div class="divTable" width="650px" style="border:1px solid">
+<div class="divTable" width="650px" id="mainTable">
 <div class="divTable" width="650px" >
 <div class="divTableBody">
 <div class="divTableRow">
