--- a/prueba mirror.html
+++ b/prueba mirror.html
@@ -124,7 +124,7 @@
 <div class="divTableRow">
 <div class="divIcon"><img src="mail.jpg" id="info_icon" alt="" /></div>
 <div class="divTableCellInfo" id="info" style="width:135px">orri@wishingwell.co.il</div>
-<div class="divIcon"><img src="website.jpg"  id="info_icon" style="padding-top:1px;" alt="" /></div>
+<div class="divIcon"><img src="website.jpg"  id="info_icon" style="vertical-align:center;" alt="" /></div>
 <div class="divTableCellInfo" id="info" >www.wishingwell.co.il</div>
 </div>
 
