--- a/prueba mirror.html
+++ b/prueba mirror.html
@@ -124,10 +124,10 @@
 <div class="divTableCellInfo" style="direction:ltr;"id="info">+972-54-424-0556</div>
 </div>
 <div class="divTableRow" >
-<div class="divIcon" ><img src="mail.jpg" id="info_icon" alt="" /></div>
+<div class="divIcon" ><img src="mail.jpg" style="padding-top:5px;" id="info_icon" alt="" /></div>
 <div class="divTableCellInfo" id="info" style="width:135px">orri@wishingwell.co.il</div>
-<div class="divIcon" style="position:relative;top:5px;"><img src="website.jpg"  id="info_icon" alt="" /></div>
-<div class="divTableCellInfo" id="info" >www.wishingwell.co.il</div>
+
+<div class="divTableCellInfo" id="info" ><img src="website.jpg"  style="height:15px;width:15px;vertical-align:bottom;padding-left:5px;" alt="" />www.wishingwell.co.il</div>
 
 </div>
 
